vlib/v/checker/tests/mut_receiver_lit.vv
struct Box {
mut:
	value int
}

fn (mut box Box) set(value int) {
	box.value = value
}

Box{}.set(0)
